--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Онлайн Университет SEHRIYO для педагогов и наставников в Узбекистане">
-  <title>S-Plus Университет для педагогов</title>
+  <title>Sehriyo Plus</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/bootstrap-grid.min.css">
@@ -21,7 +21,7 @@
   <div class="body__wrapper">
     <header class="header">
       <div class="header__container container row">
-        <a href="https://sehriyoplus.uz" class="header__logo" aria-label="Открыть главную страницу сайта Sehriyo">
+        <a href="index.html" class="header__logo" aria-label="Открыть главную страницу сайта Sehriyo">
           <picture>
             <source srcset="img/768-mobile/logo.png" media="(max-width: 767px)">
             <img src="img/768-mobile/logo-burger.png" alt="Логотип школы классного руководителя Sehriyo">
@@ -423,7 +423,7 @@
           </ul>
         </div>
         <div class="footer__company">
-          <h2 class="footer__company-title">© 2023 OOO "SEHRIYO-PLUS"</h2>
+          <h2 class="footer__company-title">© 2024 OOO "SEHRIYO-PLUS"</h2>
           <a class="footer__company-oferta" href="https://docs.google.com/document/d/16DQi9LswgE9NILJNEIUR5gxTRqVtE5fs/edit?usp=sharing&ouid=110460295868983083228&rtpof=true&sd=true" aria-label="Договор-оферты">Договор-оферты</a>
         </div>
       </div>
